--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -38,7 +38,7 @@ It was getting dark, but was not yet killing-palm. The forest-child seemed unbot
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old. It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
-The joints between the stones gave the impression that the creators had balanced finding an appropriately-shaped stone with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, gemoetric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way. In this case, though, where there were joins, there were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregularar stone puzzle pieces that somehow fit one another perfectly.
+The fine but irregular joints between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, gemoetric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way. In this case, though, where there were joins, there were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregularar stone puzzle pieces that somehow fit one another perfectly.
 
 As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages of wood. The wood was comparatively new.
 
