--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -38,31 +38,37 @@ It was getting dark, but was not yet killing-palm. The forest-child seemed unbot
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old. It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
-The fine but irregular joints between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, gemoetric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way. In this case, though, where there were joins, there were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregularar stone puzzle pieces that somehow fit one another perfectly.
+The fine but irregular joints between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way.
 
-As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages of wood. The wood was comparatively new.
+In this case though, where there were joints they were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregular stone puzzle pieces that somehow fit one another perfectly.
+
+The Crec did not have a word for this shape. It was a nearly perfect cube.
+
+xxx should be way off the path if they didn't even know about it xxx
+
+As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages[fn:: A 'rotting-age' is reckoned to be the time required for a fallen tree to rot completely back into soil. The Crec knew this was an imprecise unit of time. Part of the point was: It's such a long time, that one needn't nit-pick about whether the tree was "fully rotted" by this point or the other.] old. The wood was comparatively new.
 
 It was not a particularly inviting entrance. This structure was solely for the purpose of protecting the occupants.
 
 There was a low, two man long sort of arched hallway made from woven and somewhat living vine. The walls of this tunnel were lined with dozens of sharpened, springy saplings all anchored at their base to the wall, hanging at lazy angles near the wall and all pointing outward.
 
-It is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
+This is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
 
-Looking inward, one's eyes were met with a bunch of fire-hardened spikes making entrance impossible for a crazed, hungry predator but still allowing a human to patiently move spikes out of the way, using arms and legs to retain the ones you're already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
+Looking inward, one's eyes were met with a bunch <-xxx of fire-hardened spikes, making entrance impossible for a crazed, hungry predator but still allowing a human to patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
-This was referred to in standard Crec as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
+This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
-The Crec had latches and vine catches that would make ingress much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there (from a poorly timed release of a branch bent out of the way). The baby gave them exasperated but patient looks as it stopped every pinkie-thumb or so to press back some of the troublesome spikes at their base and wait for the two enormous people to ease past all the many pain points.
+The Crec had latches and vine catches that would make ingress much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there (from a poorly timed release of a branch bent out of the way). The baby gave them exasperated but patient looks as he stopped every pinkie-thumb or so to press back some of the troublesome spikes at their base and wait for the two enormous people to ease past all their many pain points.
 
-The idea was obvious. This was a hide that the forest-child somehow knew about. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There was a lizard-bird, hunting at night, which was the usual, and along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
+This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There was a lizard-bird, hunting at night, which was the usual, and along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
-And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they would also get the pleasure of mortally wounding a tooth-cat or two with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for settler sheep farmers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two relations away from someone who had been killed and eaten by a pride of tooth-cat.].
+And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they both might possibly enjoy the pleasure of mortally wounding a tooth-cat or two with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for settler sheep farmers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them it was a kind of entertainment.
 
 The worst part of the night, they both knew, was going to be sharing a small burrow with a reeking baby who also happened to be a /very/ poor conversationalist.
 
-Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their perdicament and plans.
+Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
 For one, they would have to awake and get running dangerously early in order too beat conch. They would get docked by xxx for not having shaved[fn:: xx] and not wearing their rhino-calf chest armor[fn:: xxx].
 
