--- a/003.org
+++ b/003.org
@@ -286,7 +286,7 @@ But it was true that Thag was afraid of lizard-bird still in a way that makes ga
 This time too, Thag had to snap out of it and continue his outreach in the most productive way possible, as always.
 
 #+begin_quote
-I was tackled from behind in a way that felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; this only the beginning of its horrors.
+I was tackled. It felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; this only the beginning of its horrors.
 
 She rode me like a hill-sled for probably four man; talons squeezing as we slid. By the time we stopped I felt like I had been wrapped in obsidian-vine[fn:: A vine that grows throughout the Crec realm. If carefully removed and uncoiled (which was obviously a dangerous art) from its host trees, which may be many, and then lightly fire-hardened. It could become a kind of barbed wire. But with pinkie-thumb sized, needle-pointed barbs.], with several powerful men wrapping it ever-tighter around me. You don't know what it feels like to be mercilessly /squeezed/ by something so terrible...
 #+end_quote
