--- a/003.org
+++ b/003.org
@@ -324,7 +324,7 @@ At length I was too exhausted to keep up and upon my surrendering, she took up /
 
 For her all this was truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
-I just remember how effortlessly she tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down her throat; making a whole-body bob as she tossed it down her own throat.
+I just remember how effortlessly she tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down her throat; her making a whole-body bob as she tossed it down her own throat.
 
 The wet sound of her feeding is something that stays with me. You don't think of what it might sound like. You don't get a chance to find out, unless you are unlucky-lucky[fn:: Crec used this compound to mean, 'Something terrible happened but something miraculous saved me.'] like me.
 
