--- a/003.org
+++ b/003.org
@@ -333,7 +333,7 @@ I could hear important parts of me going down her throat with a gulp.
 The parts you see missing here are the parts she took.
 #+end_quote
 
-Thag took some time in relishing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be. Although no one ever made the connection and Thag was definitely not always a mess like this, in this case like in many other cases, Jurd had done the lizard-bird cry in the same way he had done it literally thousands of times, and this time too, Jurd scared the scat out of him with just a small tweak of timing.
+Thag took some time in relishing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be. Although no one ever made the connection and Thag was definitely not always a mess like this, in this case like in many other cases, Jurd had done the lizard-bird cry in the same way he had done literally thousands of times, and this time too, Jurd scared the scat out of him with just a small tweak of timing.
 
 He completed his circle and made another famous Caveman Thag smile.
 
