--- a/003.org
+++ b/003.org
@@ -339,7 +339,7 @@ He completed his circle and made another famous Caveman Thag smile.
 
 Those in the first few rows could see tears coming from the outside of one of his empty eye sockets, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew they why or when of his tears.
 
-Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a disfigured, ancient man.
+Some children giggled. With a swing of his arm Thag made a vauge grabbing motion with his finger parts in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a disfigured, ancient man.
 
 #+begin_quote
 I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end. I was unable to feel any pain at the time and felt like all this was happening to someone else.
