--- a/003.org
+++ b/003.org
@@ -346,6 +346,8 @@ I had accepted that some time soon, I would fall asleep from all the blood loss 
 
 Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird wanting to steal a fresh, juicy, living prize away from its tormentor.
 
+xxx thag blind. how he see all dis. xxx
+
 I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I was unable to feel anything in an emotional way.
 
 That was the only exploratory pass it was to make. In the middle of my hazy awareness on this hazy mountain, I was suddenly flung, like a rock from a sling.
