--- a/003.org
+++ b/003.org
@@ -374,7 +374,7 @@ And it was cold. Never freezing, but cold. I believe my body was also preserved 
 
 I was very much in a state of haze and confusion at the time, but I can recall encountering a variaty of animal bones and other cast-off parts on my way down, all nested in the moss.
 
-There was at least one clearly human skull with absolutely no flesh, and one fairly fresh, cold, stiff and remarkably whole corpse, that I believe was a gorilla. Of course I had nothing in the way of eyes and only my mangled hand and arm to feel with.
+There was at least one clearly human skull with absolutely no flesh, and one fairly fresh, cold, stiff and remarkably whole corpse that I believe was a gorilla. Of course I had nothing in the way of eyes and only my mangled hand and arm to feel with.
 
 I was just a hopeless husk of a caveman. When I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
 
