--- a/003.org
+++ b/003.org
@@ -344,9 +344,11 @@ Some children giggled. With a swing of his arm Thag made a vauge grabbing motion
 #+begin_quote
 I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end. I was unable to feel any pain at the time and felt like all this was happening to someone else.
 
-Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird wanting to steal a fresh, juicy, living prize away from its tormentor.
+Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. At this point I must have had some amount of vision still. Nothing I saw seemed to match up with the way I thought my head was facing. I suspect that my last eye was hanging by its connective cord.
 
-xxx thag blind. how he see all dis. xxx
+The shadow of that second bird passing by is among my last visual memories.
+
+I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird wanting to steal a fresh, juicy, living prize away from its tormenter.
 
 I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I was unable to feel anything in an emotional way.
 
