--- a/003.org
+++ b/003.org
@@ -346,8 +346,14 @@ I had accepted that some time soon, I would fall asleep from all the blood loss 
 
 Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. At this point I must have had some amount of vision still. Nothing I saw seemed to match up with the way I thought my head was facing. I suspect that my remaining eye was just hanging by its connective vine.
 
-The shadow of that second bird passing by is among my last visual memories.
+The sight of that great shadow flashing by is among my last visual memories.
 
+Precious sight...
+#+end_quote
+
+Thag sank his head and shoulders dramatically.
+
+#+begin_quote
 I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird wanting to steal a fresh, juicy, living prize away from its tormenter.
 
 I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I was unable to feel anything in an emotional way.
