--- a/003.org
+++ b/003.org
@@ -351,7 +351,7 @@ The sight of that great shadow flashing by is among my last visual memories.
 Precious sight...
 #+end_quote
 
-Thag sank his head and shoulders dramatically.
+Thag's head and shoulders sank dramatically.
 
 #+begin_quote
 I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird wanting to steal a fresh, juicy, living prize away from its tormenter.
