--- a/003.org
+++ b/003.org
@@ -384,7 +384,9 @@ I was very much in a state of haze and confusion at the time, but I can recall e
 
 There was at least one clearly human skull with absolutely no flesh, and one fairly fresh, cold, stiff and remarkably whole corpse that I believe was a gorilla. Of course I had nothing in the way of eyes and only my mangled hand and arm to feel with.
 
-I was just a hopeless husk of a caveman. At length, I reached the bottom of the moss bed and was able to start my descent, using only down-power and a lot of wiggling. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
+I was just a hopeless husk of a caveman.
+
+At length, I reached the bottom of the moss bed and was able to start my descent, using only down-power and a lot of wiggling. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
 
 At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
 
