--- a/003.org
+++ b/003.org
@@ -388,7 +388,7 @@ I was just a hopeless husk of a caveman.
 
 At length, I reached the bottom of the moss bed and was able to start my descent, using only down-power and a lot of wiggling. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
 
-At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more. I would sometimes throw up half of what I drank, but would start drinking again right away, for blood comes from water and I had lost most.
+At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more. I would sometimes throw up half of what I drank, but would just start drinking again right away out of necessity, for blood comes from water and I had lost most.
 
 Gritty survival like that is something that surely all of you will eventually experience in your life. It is an inevitability. But it needn't be encountered aimlessly. Learn from me, children.
 #+end_quote
