--- a/003.org
+++ b/003.org
@@ -393,7 +393,7 @@ At some point I was lucky enough to wiggle my way into a brook that I had heard 
 Gritty survival like that is something that surely all of you will eventually experience in your life. It is an inevitability. But it needn't be encountered aimlessly. Learn from me, children.
 #+end_quote
 
-Thag's tale continued with mood-lightening material and some mostly unproductive question and answer time at the very end.
+Thag's tale continued with mood-lightening material and some mostly unproductive question and answer time at the very end: Jurd would answer as he /thought/ Thag might answer, but he made some real blunders occassionally and Thag was always on the verge of re-working the "Q&A segment".
 
 He had worked his way down the mountainside, for it was a very high mountain, and going wherever down-power took him, he encountered people. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
 
