--- a/003.org
+++ b/003.org
@@ -395,7 +395,7 @@ Gritty survival like that is something that surely all of you will eventually ex
 
 Thag's tale continued with mood-lightening material and some mostly unproductive question and answer time at the very end: Jurd would answer as he /thought/ Thag might answer, but he made some real blunders occasionally and Thag was always on the verge of re-working the "Q&A segment".
 
-He had worked his way down the mountainside, for it was a very high mountain, and going wherever down-power took him, he eventually encountered people, or more accurately, people encountered him. He was what we moderns would call comatose. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
+He had worked his way down the mountainside, for it was a very high mountain, and going wherever down-power took him, he eventually encountered people, or more accurately, people encountered him. He was what we moderns would call comatose. These people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
 
 Thereafter you already know the story.
 
