--- a/003.org
+++ b/003.org
@@ -402,7 +402,7 @@ Thereafter you already know the story.
 This is how Thag and Jurd ended today's telling:
 
 #+begin_quote
-Children I feel I have been blessed by The Ender-of-Questions in a way that is so direct and obvious to me, its will has been clearly revealed to me.
+Children I feel I have been blessed by The Ender-of-Questions in a way that is so direct and obvious to me, I feel its will has been clearly revealed.
 
 My purpose in life is to protect children from danger, and because this burden was forced upon me, I /know/ lizard-bird. I know them. I want you to make sure that you /learn/ something today. Don't be afraid, but don't be foolish!
 
