oops have to merge

--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -54,17 +54,127 @@ The idea was obvious. This was a hide that the forest-child somehow knew about. 
 
 And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they would also get the pleasure of mortally wounding a tooth-cat or two with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for settler sheep farmers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two relations away from someone who had been killed and eaten by a pride of tooth-cat.].
 
-For them it was a kind of entertainment.
+For them it would be a kind of entertainment.
 
-The worst part of the night, they both knew, was going to be sharing a small burrow with a reeking baby who also happened to be a /very/ poor conversationalist.
+They both noted how some of the living vine of the portico was grown soundly into the stone of the hide. Anything that wanted in, short of an ambling-feast, would need to use the door, which was well protected, as described.
 
-Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their perdicament and plans.
+They looked around as best they could in the dark hide. Gog was rustling through his kit, trying to get the ingredients necessary for light.
+
+Soon Gog was making a noise and a sight that instantly got the attention of the other two. In the complete dark of the hide there was a bright flash accompanied by a click. Then another. Under normal circumstances Grav would be taunting Gog about his fire-making skills, but this time he was wishing him nothing but quick success.
+
+After all-finger or so clicks, there was a blue flash and then a growing flame of warm yellow.
+
+Gog was holding an unfired clay oil lamp with a small, bright, efficient flame at the tip of its sturdy, short nozzle.
+
+This is a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. It was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the jungle with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave of a distinctly comforting smell.
+
+Inside of course any one of literally thousands of known flamable oils could be used. One's preferred oil usually came down to which unpleasant characteristcs could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you would have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be got in completely different ways. Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
+
+Of course they had the nicest oil. It also happened to be rather a cheap one as most considered its smell to be a down side. They thought just the opposite: Turpentine[fn:: More or less.] burned predictably, gave little smoke, had a bright flame, and smelled like productively working with lumber. It was a nice, crafty kind of smell to very few, including them.
+
+The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a /very/ poor conversationalist.
+
+In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Being familiar, somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful, but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.]. A few millipedes that one would not want to touch[fn:: Nothing capable of spraying.].
+
+And right in the middle was a pile of burnt bones and cold coals.
+
+Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
 For one, they would have to awake and get running dangerously early in order too beat conch. They would get docked by xxx for not having shaved[fn:: xx] and not wearing their rhino-calf chest armor[fn:: xxx].
 
 The last palm of woods would not be entirely quiet at that time. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and enough moon going for them.
+
+/Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangabile the could do about the future at this point.
+
+Grav and Gog's attention went back to the forest-baby.
+
+They had determined as best they could that his name was Oh-Mas, although Grav wondered if /one's name/ meant the same thing to the baby as it did to them.
+
+He had an idea that, /yes/, they had names, /of a sort/, but /it was complicated/. Just as the instincts that forest-children have about language in general could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
+
+Oh-Mas too was working with fire.
+
+He had packed a large pipe and was lighting a twig to get things going.
+
+There was a lot to know about smoking plant matter out here.
+
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment, that relying on those from strange parts to introduce you to a new find was often fruitful.
+
+He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
+
+"Gog, I think we need to go easy. There's no judging its power from appearnces."
+
+"Sure. We need our wits about us. Let us just calibrate ourselves by supposing it has the force of toad-weed."
+
+Grav laughed remembering how sick-monkey and randy-monkey they had become with the Balrag girls.
+
+"Ok. Well, I will take exactly half of that and so will you."
+
+"Agreed."
+
+Oh-Mas had his pipe going by now and had filled the top half of the burrow with laminar green smoke. The appearance of the smoke alone would have been a warning to more experienced reflect-soul-trekkers.
+
+Without ceremony, Gog grabbed the pipe from the baby. For a very brief instant he made a very baby-like "whaa" which he clipped sharply, switching to a friendly, generous demeanor.
+
+Gog never mistook Oh-Mas for an actual baby again. There was a restrained civility in the forest-child sometimes that made the men wonder if he was always in control of himself.
+
+After watching this and mindlessly accepting the pipe from Gog, Grav's next memory was he and Gog were laying face-up with the tops of their heads inches appart and each man's feet almost touching the enclosure's inner walls.
+
+They were staring up. They had been in a long, convoluted conversation following some of the most inspired trains of thought probably for palm when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+
+The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, and more or less normal, but loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
+
+They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thicknest at the least. The claw, whoever's claw, was at least that long.
+
+And it belonged to an animal smart enough to start work immediately on tearing the vine trapway away from the hide altogether, which for an averaged sized male cat would mean sure death, as it could probably fit a good way into the opening and its reach was enough to at least poke enough holes in you to end you.
+
+The gaps between the vine provied enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
+
+Grav and Gog continued to state at the ceiling.
+
+The battle cries of the baby got intense enough to interest them and rolling their heads over to watch the show.
+
+There would be no more talking for a while. The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal that was doing all the damage the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this/ the cat may have thought.
+
+Grav and Gog could now clearly see the mad beast at the end of the tunnel, the cat taking some time to just express his anger just in front and those spikes now appearing hoplessly flimsy from this side.
+
+Whatever the danger, the two men were captivated.
+
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog felt he could /see/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symetrical tongue, tucked fark back in the throat had spikes that went from simi-transparent crystal where they were rooted in the toung to shiny black at the sharp tips, like terantula fangs.
+
+As if in place of spume, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
+
+It was drooling blood and pulsing bright pink foam out of the sides of its mouth in pluses, a bit more pushed out with each breath.
+
+More purple-pink gum would be exposed with every high screech-like roar.
+
+It was pissed.
+
+Crazed, the baby grabbed the only lit lamp and smartly slung it hard right onto the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
+
+This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to gloaing with a few puffs of air beforehand.
+
+With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being. The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back and ribcage and also down the outside of its front legs, and the flame followed.
+
+The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
+
+But then the cat snapped.
+
+It charged the opening, propelling its whole body with hind legs and making syncronized swats with both fore limbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
+
+It's swatting, almost clapping, but with paws not quite meeting, got more rappid as he approached[fn:: This can be seen in modern domesticated casts. It's known as 'fuck your shit up' mode.].
+
+xxx sure seems like if cats like that walking around, no one would go outside.
+
+
+So long as it stayed where it was, all was safe.
+
+Things began to feel unsafe for the men when they looked at its eyes, 
+
+
+xxx
 
 xxx
 xxx they fight off animals
@@ -85,6 +195,9 @@ xxx They get there. Find some musty, dusty armor to throw on, ill fitting.
 xxx
 xxx They /just make it/ to conch, stand at attention
 xxx
+xxx They get taken aside by someone. "Hey, you guys found that thing right?
+xxx Can you find me one?..." They are able to ditch club drill and do
+xxx something cool instead.
 
 --
 
