--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -14,7 +14,7 @@ He made the eyes-widening, brow-rising, cock to the head "/well?!/" expression t
 
 "He seems to be 'asking' us.", said Gog.
 
-"Yes.", agreed Gog. Then after a pause, ".../what/ is he asking us?"
+"Yes.", agreed Gog. Then after a pause, "What is he asking us?"
 
 The forest-child made a mock jog in the direction he had been heading and then again: "/well?/"
 
