--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -22,7 +22,9 @@ Grav and Gog looked at each other. Not having a preference for /where/ along the
 
 They followed the stinking baby at a right angle to the trail. As mentioned, forest-children tend to travel as though everywhere was a path. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
 
-In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate. There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
+In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate.
+
+There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons where most called for to shoo away anything that might disturb their peace. <-xxx
 
