--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -26,7 +26,7 @@ In the growth strata of most jungle or woods, there was a fairly consistently un
 
 There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
 
-But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons where in wider use, to shoo away anything that might disturb their peaceful plant life.
+But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons were in wider use, to shoo away anything that might disturb their peaceful plant life.
 
 For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. Plenty of the more fauna-type dangerous and painful things lived in this layer. This was the whole reason for established paths after all!
 
