--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -28,9 +28,13 @@ There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinki
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons were in wider use, to shoo away anything that might disturb their peaceful plant-life.
 
-For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. Plenty of the more fauna-type dangerous and painful things lived in this layer. This was the whole reason for established paths after all!
+For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
 
-The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders, who they could identify as harmless, even at this pace.)
+A Crec ecology text book could easily have used a picture of this bit of woods to illustrate these concepts.
+
+The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small, but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders of each, who they could immedately identify as harmless, even at this pace, and would try not to wontonly kill.)
+
+Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop" with spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead. It was a kind of game they had.
 
 It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby, now dragging his long spear behind, his hand around its tip, his thumb seemingly checking the point for sharpness mindlessly at intervals, had no trouble at all. <-xxx
 
